--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>DOGE2048</title>
+  <title>DOGE65536</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.png">
@@ -23,7 +23,7 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">DOGE<span style="color:red">2</span><span style="color:#00FF00">0</span><span style="color:blue">4</span><span style="color:#00FFFF">8</span>
+      <h1 class="title">DOGE<span style="color:red">6</span><span style="color:#00FF00">5</span><span style="color:blue">5</span><span style="color:#00FFFF">3</span><span style="color:#FF00FF">6</span>
       </h1>
       <div class="scores-container">
         <div class="score-container">0</div>
@@ -38,7 +38,8 @@
       <div class="info">
         <!-- <div class="hide-info"><a>HIDE</a></div> -->
        <p>Use your arrow keys or swipe to combine similar Doges and score points! </p>
-       <p>Unlock all 11 doges to win!</p>       
+       <p>Unlock all 16 doges to win!</p>
+       <p> Forked by       <a href="http://github.com/Glukascewic1/">Glukascewic1.</a>
        <p> Doge-ified by   <a href="http://tinymammals.com" target="_blank">Tiny Mammals.</a>
        <p> 2048 Created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a></p> 
        <p>Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
